--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
     /* Set initial opacity to 0 to hide */
     transition: opacity 0.3s ease-in-out;
     /* Add a smooth transition effect */
+
+    margin-top: -200px;
+    /* color: white; */
+    background-color: lightblue;
 }
 
 .portfolio-card:hover .card-body {
@@ -23,13 +27,19 @@
 }
 
 .portfolio-card:hover a {
-    color: red;
+    color: teal;
     /* Change color on hover */
 }
+/* This is a test
+.portfolio-image {
+width: 100%;
+min-height: 250px;
+}
+*/
 
 /* AboutMe.css */
 
-.about-me-container {
+/* .about-me-container {
     padding: 20px;
   }
   
@@ -49,3 +59,22 @@
     margin-bottom: 15px;
   }
   
+  main {
+    margin-top: 60px;
+  } */
+
+.about-me-content {
+  display: flex; /* Use flexbox to arrange children horizontally */
+}
+
+.portfolio-image {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  display: block;
+  margin-right: 20px; /* Adjust the margin to create space between the image and text */
+}
+
+.about-text {
+  flex: 1; /* Allow the text to take up the remaining space */
+}
