--- a/src/App.css
+++ b/src/App.css
@@ -1,80 +1,64 @@
 .portfolio-card {
-    overflow: hidden;
-    /* Hide overflowing content */
+  overflow: hidden;
+  /* Hide overflowing content */
 }
 
 .portfolio-card .card-body {
-    opacity: 0;
-    /* Set initial opacity to 0 to hide */
-    transition: opacity 0.3s ease-in-out;
-    /* Add a smooth transition effect */
+  opacity: 0;
+  /* Set initial opacity to 0 to hide */
+  transition: opacity 0.3s ease-in-out;
+  /* Add a smooth transition effect */
 
-    margin-top: -200px;
-    /* color: white; */
-    background-color: lightblue;
+  margin-top: -200px;
+  background-color: lightblue;
 }
 
 .portfolio-card:hover .card-body {
-    opacity: 1;
-    /* Show on hover */
+  opacity: 1;
+  /* Show on hover */
 }
 
 .portfolio-card a {
-    color: black;
-    /* Set the initial color of the links */
-    transition: color 0.3s ease-in-out;
-    /* Add a smooth transition effect */
+  color: black;
+  /* Set the initial color of the links */
+  transition: color 0.3s ease-in-out;
+  /* Add a smooth transition effect */
 }
 
 .portfolio-card:hover a {
-    color: teal;
-    /* Change color on hover */
-}
-/* This is a test
-.portfolio-image {
-width: 100%;
-min-height: 250px;
-}
-*/
-
-/* AboutMe.css */
-
-/* .about-me-container {
-    padding: 20px;
-  }
-  
-  .about-me-content {
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  
-  .section-title {
-    color: #007BFF;
-    font-size: 2em;
-    margin-bottom: 20px;
-  }
-  
-  p {
-    line-height: 1.5;
-    margin-bottom: 15px;
-  }
-  
-  main {
-    margin-top: 60px;
-  } */
-
-.about-me-content {
-  display: flex; /* Use flexbox to arrange children horizontally */
+  color: teal;
+  /* Change color on hover */
 }
 
 .portfolio-image {
   width: 100%;
-  max-width: 300px;
+  max-width: auto;
+  min-height: 250px;
   height: auto;
   display: block;
-  margin-right: 20px; /* Adjust the margin to create space between the image and text */
+  margin-right: 20px;
 }
 
-.about-text {
-  flex: 1; /* Allow the text to take up the remaining space */
+/* AboutMe.css */
+
+.about-me-container {
+  padding: 20px;
 }
+
+.about-me-content {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.section-title {
+  color: #007BFF;
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+p {
+  line-height: 1.5;
+  margin-bottom: 15px;
+
+}
+
